--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "isometric"
-version = "1.1.0"
+version = "1.2.0"
 description = "Vectors on an isometric grid."
 readme = "README.rst"
 authors = [
-    { name = "Johannes Programming", email = "johannes-programming@posteo.org" },
+    { name = "Johannes", email = "johannes-programming@posteo.org" },
 ]
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -18,7 +18,8 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 keywords = []
-dependencies = []
+dependencies = [
+]
 requires-python = ">=3.11"
 
 [project.license]
